include/ham/hamsterdb.h


struct ham_db_t;
typedef struct ham_db_t ham_db_t;
struct ham_env_t;
typedef struct ham_env_t ham_env_t;
struct ham_cursor_t;
typedef struct ham_cursor_t ham_cursor_t;
typedef struct {
  uint32_t size;
  void *data;
  uint32_t flags;
  uint32_t partial_offset;
  uint32_t partial_size;
} ham_record_t;
typedef struct {
  uint16_t size;
  void *data;
  uint32_t flags;
  uint32_t _flags;
} ham_key_t;
typedef struct {
  uint32_t name;
  uint64_t value;
} ham_parameter_t;
typedef void HAM_CALLCONV (*ham_errhandler_fun)(int level, const char *message);
HAM_EXPORT void HAM_CALLCONV
ham_set_errhandler(ham_errhandler_fun f);
HAM_EXPORT const char * HAM_CALLCONV
ham_strerror(ham_status_t status);
HAM_EXPORT void HAM_CALLCONV
ham_get_version(uint32_t *major, uint32_t *minor,
            uint32_t *revision);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_create(ham_env_t **env, const char *filename,
            uint32_t flags, uint32_t mode, const ham_parameter_t *param);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_open(ham_env_t **env, const char *filename,
            uint32_t flags, const ham_parameter_t *param);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_create_db(ham_env_t *env, ham_db_t **db,
            uint16_t name, uint32_t flags, const ham_parameter_t *params);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_open_db(ham_env_t *env, ham_db_t **db,
            uint16_t name, uint32_t flags, const ham_parameter_t *params);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_rename_db(ham_env_t *env, uint16_t oldname,
            uint16_t newname, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_erase_db(ham_env_t *env, uint16_t name, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_flush(ham_env_t *env, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_get_database_names(ham_env_t *env, uint16_t *names,
            uint32_t *count);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_env_close(ham_env_t *env, uint32_t flags);
struct ham_txn_t;
typedef struct ham_txn_t ham_txn_t;
HAM_EXPORT ham_status_t
ham_txn_begin(ham_txn_t **txn, ham_env_t *env, const char *name,
            void *reserved, uint32_t flags);
HAM_EXPORT ham_status_t
ham_txn_commit(ham_txn_t *txn, uint32_t flags);
HAM_EXPORT ham_status_t
ham_txn_abort(ham_txn_t *txn, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_get_error(ham_db_t *db);
typedef int HAM_CALLCONV (*ham_compare_func_t)(ham_db_t *db,
                  const uint8_t *lhs, uint32_t lhs_length,
                  const uint8_t *rhs, uint32_t rhs_length);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_set_compare_func(ham_db_t *db, ham_compare_func_t foo);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_find(ham_db_t *db, ham_txn_t *txn, ham_key_t *key,
            ham_record_t *record, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_insert(ham_db_t *db, ham_txn_t *txn, ham_key_t *key,
            ham_record_t *record, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_erase(ham_db_t *db, ham_txn_t *txn, ham_key_t *key, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_get_key_count(ham_db_t *db, ham_txn_t *txn, uint32_t flags,
            uint64_t *keycount);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_get_parameters(ham_db_t *db, ham_parameter_t *param);
HAM_EXPORT ham_env_t *HAM_CALLCONV
ham_db_get_env(ham_db_t *db);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_db_close(ham_db_t *db, uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_cursor_create(ham_cursor_t **cursor, ham_db_t *db, ham_txn_t *txn,
            uint32_t flags);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_cursor_clone(ham_cursor_t *src, ham_cursor_t **dest);
HAM_EXPORT ham_status_t HAM_CALLCONV
ham_cursor_move(ham_cursor_t *cursor, ham_key_t *key,
            ham_record_t *record, uint32_t flags);
#define HAM_FIND_LT_MATCH               0x1000
#define HAM_FIND_GT_MATCH               0x2000